Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL)
Description
There is not enough information in EXPLAIN/ANALYZE output about the strategy chosen to process a subquery. This task aims to augment the output for materialized subqueries. The example of desired output is as follows:
"subqueries": [
|
{
|
"NULL-AWARE-MATERIALIZATION": {
|
|
|
"r_algorithm": "full-scan-on-null",
|
"r_lookups": 122234,
|
"r_full_scans": 4
|
|
|
"query_block": {
|
"select_id": 2,
|
Attachments
Issue Links
- relates to
-
MDEV-34301 ANALYZE FORMAT=JSON doesn't show expression cache for IN subqueries
-
- Open
-
-
MDEV-34665 Simplify IN predicate processing for NULL-aware materialization involving only one column
-
- Closed
-