sql/sql_array.h
@@ -140,6 +140,12 @@ public:
     DBUG_ASSERT(idx < array.elements);
     return *(((Elem*)array.buffer) + idx);
   }
+
+  Elem& operator[](size_t idx)
+  {
+    return at(idx);
+  }
+
   /// Const variant of at(), which cannot change data
   const Elem& at(size_t idx) const
   {
